--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pyrogram==2.0.106
 tgcrypto
-pytgcalls==1.0.0
+pytgcalls==3.0.0.dev6
 instagrapi
 pymongo
 python-dotenv
 dnspython
+pyaes==1.6.1
+pysocks==1.7.1
