--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,11 @@ instagrapi
 pymongo
 python-dotenv
 dnspython
-pyaes>=1.6.1
+pyaes==1.6.1
 pysocks==1.7.1
 
-# IMPORTANT: Yahan pehle se jo thi woh rakho, aur pyaes ke liye nayi line add karo
+# SABSE IMPORTANT LINES (yeh exact aise hi rakhna):
 opencv-python-headless==4.5.3.56
 --only-binary=:all: opencv-python-headless
 --only-binary=:all: numpy
---only-binary=:all: pyaes  # <--- YEH NAYI LINE ADD KARO
+--only-binary=:all: pyaes    # <--- YEH LINE ADD KARO
