--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pyaes==1.6.1
 pyrogram==2.0.106
 pytgcalls==3.0.0.dev18
 TgCrypto
@@ -6,3 +5,6 @@ instagrapi
 pymongo
 python-dotenv
 dnspython
+numpy==1.24.3
+pyaes
+
