--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python310", "ffmpeg", "git"]
+nixPkgs = ["python310", "ffmpeg", "git", "gcc"]
 
 [phases.install]
 cmds = ["python -m venv .venv && source .venv/bin/activate && pip install -r requirements.txt"]
