--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,8 +2,12 @@
 nixPkgs = ["python310", "ffmpeg", "git", "gcc", "zlib", "libjpeg", "openjpeg"]
 
 [phases.install]
-# Ye line magic karegi: Pip ko update karke fast install karegi
-cmds = ["python -m venv .venv && source .venv/bin/activate && pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"]
+cmds = [
+    "python -m venv .venv && source .venv/bin/activate && pip install --upgrade pip setuptools wheel",
+    "pip install -r requirements.txt",
+    "pip install av==10.0.0", 
+    "pip install --no-deps pytgcalls==3.0.0.dev18"
+]
 
 [phases.start]
 cmds = ["python main.py"]
