--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 pyrogram==2.0.106
 TgCrypto
-instagrapi
 pymongo
 python-dotenv
 dnspython
 pyaes==1.6.1
+
+# Instagram (NO video deps)
+instagrapi==2.0.0
+av>=12.0.0
