--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 pyrogram==2.0.106
-TgCrypto
-pymongo
-python-dotenv
-dnspython
+tgcrypto==1.2.5
 pyaes==1.6.1
 
-# Instagram (force safe deps)
-instagrapi==2.0.0
-av>=12.0.0
+py-tgcalls==0.9.7
+
+python-dotenv
+instagrapi
+requests
+wget
+yt-dlp
+ffmpeg-python
+dnspython
