--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
+# Core
 pyrogram==2.0.106
 tgcrypto==1.2.5
 pyaes==1.6.1
+python-dotenv
+requests
+dnspython
 
+# VC (NO PyAV)
 py-tgcalls==0.9.7
 
-python-dotenv
-instagrapi
-requests
-wget
-yt-dlp
-ffmpeg-python
-dnspython
+# Instagram (PINNED SAFE VERSION)
+instagrapi==2.0.0
+
+# 🔥 OVERRIDE PyAV (THIS IS THE KEY)
+av>=12.0.0
